--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,15 @@
 {%block title%} To continue, please, login{%endblock%}
 {%block conteudo%}
 
-
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul class=flashes>
+            {% for message in messages %}
+              <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
 
 <div class="login">
   <h1>Login</h1>
