--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -1,17 +1,25 @@
 {%extends "base.html"%}
-{%block title%} To continue, please, login{%endblock%}
+{%block title%}Crete your account!{%endblock%}
 {%block conteudo%}
 
-
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul class=flashes>
+            {% for message in messages %}
+              <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endwith %}
 
 <div class="login">
   <h1>Create Account</h1>
     <form method="POST" action="/creatinguser">
         <input type="text" name="first-name" placeholder="First Name" required="required" />
-        <input type="text" name="last-name" placeholder="Last Name" />
-        <input type="text" name="username" placeholder="Username" />
-        <input type="password" name="password" placeholder="Password" />
-        <input type="password" name="confirm-password" placeholder="Confirm Password" />
+        <input type="text" name="last-name" placeholder="Last Name" required />
+        <input type="text" name="username" placeholder="Username" required />
+        <input type="password" name="password" placeholder="Password" required/>
+        <input type="password" name="confirm-password" placeholder="Confirm Password" required />
         <button type="submit" class="btn btn-primary btn-block btn-large">Create Account.</button><br>
         <button type="reset" class="btn btn-danger btn-block btn-large">Reset</button>
     </form>
