--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
       <input type="text" name="username" placeholder="Username" required="required" />
         <input type="password" name="password" placeholder="Password" required="required" />
         <button type="submit" class="btn btn-primary btn-block btn-large">Let me in.</button>
-    </form>
+        <a href="{{url_for('index')}}" class="btn btn-primary btn-block btn-large">Cancel</a></form>
 </div>
 
 
