--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -21,7 +21,8 @@
         <input type="password" name="password" placeholder="Password" required/>
         <input type="password" name="confirm-password" placeholder="Confirm Password" required />
         <button type="submit" class="btn btn-primary btn-block btn-large">Create Account.</button><br>
-        <button type="reset" class="btn btn-danger btn-block btn-large">Reset</button>
+        <button type="reset" class="btn btn-danger btn-block btn-large">Reset Form</button><br>
+        <a href="{{url_for('index')}}" class="btn btn-primary btn-block btn-large">Cancel</a>
     </form>
 </div>
 
