--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,97 @@
-{%extends "base.html"%}
-{%block title%} To continue, please, login{%endblock%}
-{%block conteudo%}
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Index Page - Rent a CAR - Flask Project</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="{{url_for('static', filename='indexpage/css/main.css')}}" />
+	</head>
+	<body class="is-preload">
 
-{% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <ul class=flashes>
-            {% for message in messages %}
-              <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-{% endwith %}
+		<!-- Nav -->
+			<nav id="nav">
+				<ul class="container">
+					{%if info.logged_user == False%}
+						<li><a href="{{url_for('login')}}">Login</a></li>
+					{%else%}
+						<li>Welcome {{info.user_name}}</li>
+					{%endif%}
+					{%if info.logged_user == False%}
+						<li><a href="{{url_for('create_user')}}">Create a User</a></li>
+					{%else%}
+					<li><a href="{{url_for('logout')}}">Logout</a></li>
+					{%endif%}
+					<li><a href="#">Verify Cars</a></li>
+					<li><a href="#">Add new Car</a></li>
+					{%if info.logged_user == True%}
+						<li><a href="#">Edit My Informations</a></li>
+					{%else%}
+						{{info.greeting}}
+					{%endif%}
+				</ul>
+			</nav>
 
-<div class="login">
-  <h1>Welcome</h1>
+		<!-- Home -->
+			<article id="top" class="wrapper style1">
+				<div class="container">
+					<div class="row">
+						<div class="col-4 col-5-large col-12-medium">
+							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+						</div>
+						<div class="col-8 col-7-large col-12-medium">
+							<header>
+								<h1>Welcome to <strong>Rent a Car</strong>.</h1>
+							</header>
+							<p>Here you can <strong>rent a car</strong>, easily and that website was done using flask.
+								You can check the API, verify the cars and rent a car.</p>
+							<a href="#work" class="button large scrolly">Check the Cars</a>
+						</div>
+					</div>
+				</div>
+			</article>
 
-</div>
+		<!-- Work -->
+			<article id="work" class="wrapper style2">
+				<div class="container">
+					<header>
+						<h2>Last Cars Added</h2>
+						<p>Here you can check the lasts cars added in your database</p>
+					</header>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon featured fa-comments"></span>
+								<h3>Consequat lorem</h3>
+								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon solid featured fa-camera-retro"></span>
+								<h3>Lorem dolor tempus</h3>
+								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class="icon featured fa-thumbs-up"></span>
+								<h3>Feugiat posuere</h3>
+								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+							</section>
+						</div>
+					</div>
+					<footer>
+						<p>If you wanna check all cars available, click in link below!!</p>
+						<a href="#portfolio" class="button large scrolly">Check all Cars now!</a>
+					</footer>
+				</div>
+			</article>
+			<script src="{{url_for('static', filename='indexpage/js/jquery.min.js')}}"></script>
+			<script src="{{url_for('static', filename='indexpage/js/jquery.scrolly.min.js')}}"></script>
+			<script src="{{url_for('static', filename='indexpage/js/browser.min.js')}}"></script>
+			<script src="{{url_for('static', filename='indexpage/js/breakpoints.min.js')}}"></script>
+			<script src="{{url_for('static', filename='indexpage/js/util.js')}}"></script>
+			<script src="{{url_for('static', filename='indexpage/js/main.js')}}"></script>
 
-
-
-{%endblock%}
+	</body>
+</html>
